2011-06-01  Ramon Novoa  <rnovoa@artica.es>

	* include/auth/mysql.php: Merged from trunk. Do not allow empty
	  passwords when authenticating against an LDAP server.

2011-05-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Typo fixed 
	in a function name

2011-05-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Added a hidden 
	control in the module form to keep the type when the type combo
	is disabled

2011-05-17 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_db.php: added the parameter to delete_only in the call
	to enterprise function.

2011-05-10  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php: Merged from trunk. Do not count the
	  empty start of an interval as 0 (affects AVG and SLA).

2011-05-06  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alerts/alert_list.list.php: Fixed filter parameters are not
	taken over with offset selection.

2011-05-06  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_reporting_advanced_tab.php: Added a missing
	help file.

2011-05-04 Vanessa Gil <vanessa.gil@artica.es>

	*  operation/agentes/estado_agente.php: Fixed error on list of agents

2011-05-01 SAncho Lerena <slerena@artica.es>

	*  include/help/en/help_reporting_advanced_tab.php,
	include/help/es/help_reporting_advanced_tab.php: MIssing help files.

2011-04-25 Javier Lanz <javier.lanz@artica.es>

	* operation/agentes/tactical.php: Fixed a style problem on Internet
	Explorer

	Fix: #3279238

2011-04-20 Javier Lanz <javier.lanz@artica.es>

	* godmode/alerts/configure_alert_action.php: Fixed a small bug about
	entities on "Command preview"

	Fix: #3276373

2011-04-19 Javier Lanz <javier.lanz@artica.es>

	* include/functions_modules.php: Fixed an error about the agent status
	* godmode/agentes/agent_template.php: Fixed an error about the agent
	status

	Fix: #3251822

2011-04-19 Javier Lanz <javier.lanz@artica.es>
